[package]
name = "pwm-speaker"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies]
stm32f103xx-hal = { git = "https://github.com/ilya-epifanov/stm32f103xx-hal", rev = "3a8d64d3605b5eac9fd15eea0ba25319fbb8375c" }
cortex-m-rt = "0.5"
cast = { version = "*", default-features = false }

[dev-dependencies]
cortex-m = "0.5"
panic-semihosting = "0.3"
